--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
@@ -138,7 +138,6 @@
                 left: 0;
                 height: 40px;
                 top: 0;
-                background: @textColorBlack;
                 width: ~"calc(100% - 1px)";
 
                 .title {
@@ -170,7 +169,7 @@
                         padding: 0 5px;
                         width: 100%;
 
-                        md-icon {
+                        svg {
                             margin: 0 auto;
 
                             &.whatsapp {
