--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
@@ -87,6 +87,14 @@
             }
         }
     }*/
+    .status .lock {
+        width: 20px;
+        position: absolute;
+        right: 0;
+        top: 18px;
+        fill: @textColorGrey;
+    }
+
     .back-arrow {
         svg {
             fill: @textColorBlack;
