--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.css
@@ -4,12 +4,6 @@
     margin-right: -95px;
   }
 }
-.library-choose .md-button {
-  padding: 0 17px;
-  border-radius: 5px;
-  line-height: 30px;
-  min-height: 30px;
-}
 .library-choose .univeristy {
   display: -webkit-flex;
   display: -ms-flex;
@@ -88,7 +82,7 @@
     margin: 0 auto;
     background-repeat: no-repeat;
     background-position: calc(50% + 350px) 100%;
-    background-image: url('/Images/Site/create_uni_b.png?v=3');
+    background-image: url('/Images/Site/create_uni.png');
     max-width: 1150px;
     padding-right: 12vw;
     padding-left: 12vw;
