--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/Password.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/Password.cshtml
@@ -6,7 +6,7 @@
         <form name="passwordForm" class="text-capitalize" novalidate ng-submit="p.submit(passwordForm)">
             <md-input-container>
                 <label>@AccountResource.CurrentPassword</label>
-                <input required name="old" minlength="6" type="password" ng-model="p.old" ng-focus="passwordForm.old.$setValidity('server', true);" />
+                <input required md-no-asterisk name="old" minlength="6" type="password" ng-model="p.old" ng-focus="passwordForm.old.$setValidity('server', true);" />
                 <div ng-messages="passwordForm.old.$error" ng-show="passwordForm.old.$dirty">
                     <div ng-message="required">@GeneralResources.RequiredField</div>
                     <div ng-message="minlength">@GeneralResources.TooShort</div>
@@ -15,7 +15,7 @@
             </md-input-container>
             <md-input-container>
                 <label>@AccountResource.NewPassword</label>
-                <input required minlength="6" name="new" type="password" ng-model="p.new" />
+                <input required md-no-asterisk minlength="6" name="new" type="password" ng-model="p.new" />
                 <div ng-messages="passwordForm.new.$error" ng-show="passwordForm.new.$dirty">
                     <div ng-message="required">@GeneralResources.RequiredField</div>
                     <div ng-message="minlength">@GeneralResources.TooShort</div>
