--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Create.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Create.cshtml
@@ -7,7 +7,7 @@
                 <md-input-container flex>
                     <label>@DashboardResource.EnterGroupName</label>
                     <input id="createBoxInput" @*id="test"*@ @*autofocus*@ type="text" @*focus-me="cb.focus"*@ autocomplete="off" 
-                           required ng-model="cb.boxName" name="name" 
+                           required md-no-asterisk ng-model="cb.boxName" name="name" 
                            ng-change="createBox.name.$setValidity('server',true)">
                     <div ng-messages="createBox.name.$error" ng-show="createBox.name.$dirty">
                         <div ng-message="required">@GeneralResources.RequiredField</div>
