--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/_itemComments.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/_itemComments.cshtml
@@ -21,7 +21,7 @@
                         </div>
                         <form name="newComment" class="new-comment-form" novalidate ng-submit="c.addComment(newComment)">
                             <md-input-container md-no-float>
-                                <input autocomplete="off" required ng-model="c.newCommentText" name="comment" user-not-register-popup="focus" ng-focus="c.commentFocused()" placeholder="@ItemsResources.NewComment" ng-change="newComment.comment.$setValidity('server',true)">
+                                <input autocomplete="off" required md-no-asterisk ng-model="c.newCommentText" name="comment" user-not-register-popup="focus" ng-focus="c.commentFocused()" placeholder="@ItemsResources.NewComment" ng-change="newComment.comment.$setValidity('server',true)">
                                 <div ng-messages="newComment.comment.$error" ng-show="newComment.comment.$dirty">
                                     <div ng-message="required">@GeneralResources.RequiredField</div>
                                     <div ng-message="server">{{c.error}}</div>
@@ -96,7 +96,7 @@
                             <form name="newReply" class="add-comment-reply add-reply" novalidate ng-if="comment.showFrom" ng-submit="c.addCommentReply(comment, newReply)">
                                 <div class="add-reply-wrapper">
                                     <md-input-container md-no-float>
-                                        <input autocomplete="off" name="reply" user-not-register-popup="click" required autofocus ng-model="c.newCommentReplyText" placeholder="@ItemsResources.NewComment" ng-change="newReply.reply.$setValidity('server',true)">
+                                        <input autocomplete="off" name="reply" user-not-register-popup="click" required md-no-asterisk autofocus ng-model="c.newCommentReplyText" placeholder="@ItemsResources.NewComment" ng-change="newReply.reply.$setValidity('server',true)">
                                         <div ng-messages="newReply.reply.$error" ng-show="newReply.reply.$dirty">
                                             <div ng-message="required">@GeneralResources.RequiredField</div>
                                             <div ng-message="server">{{c.error}}</div>
