--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.css
@@ -75,6 +75,13 @@
 .library .dots-3 {
   fill: #c3c3c3;
 }
+.library .status .lock {
+  width: 20px;
+  position: absolute;
+  right: 0;
+  top: 18px;
+  fill: #888b8e;
+}
 .library .back-arrow svg {
   fill: #212325;
 }
