--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
@@ -6,13 +6,6 @@
         margin-right: -@widthOfChat;
     }
 
-    .md-button {
-        padding: 0 17px;
-        border-radius: 5px;
-        line-height: 30px;
-        min-height: 30px;
-    }
-
     .univeristy {
         .displayFlex();
         font-weight: 700;
@@ -120,7 +113,7 @@
             margin: 0 auto;
             background-repeat: no-repeat;
             background-position: ~"calc(50% + 350px)" 100%;
-            background-image: url('/Images/Site/create_uni_b.png?v=3');
+            background-image: url('/Images/Site/create_uni.png');
             max-width: 1150px;
             padding-right: 12vw;
             padding-left: 12vw;
