--- a/Zbang.Cloudents.Mvc4WebRole/Views/Quiz/CreateQuiz.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Quiz/CreateQuiz.cshtml
@@ -22,7 +22,7 @@
     <form name="quizName" novalidate>
         <md-input-container class="quiz-name" md-no-float>
             <input class="form-control" name="name" ng-disabled="q.quizNameDisabled && q.quizData.name" type="text"
-                   placeholder="@QuizResources.EnterQuizName" autofocus required ng-model="q.quizData.name"
+                   placeholder="@QuizResources.EnterQuizName" autofocus required md-no-asterisk ng-model="q.quizData.name"
                    ng-model-options="{ updateOn: 'default blur', debounce: { default: 500, blur: 0 } }" ng-blur="q.quizNameDisabled = true" />
             <button type="button" ng-click="q.quizNameDisabled = false"><md-icon md-svg-icon="t:edit"></md-icon>@*@Html.Svg("~/images/site/icons.svg", "edit")*@</button>
             <div class="error-message show" ng-messages="quizName.name.$error" ng-show="true">
