--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/_ChooseCreateUniversity.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/_ChooseCreateUniversity.cshtml
@@ -13,7 +13,7 @@
                 </md-select>
             </md-input-container>
             <md-input-container>
-                <md-autocomplete required md-input-name="name"
+                <md-autocomplete required md-no-asterisk md-input-name="name"
                                  md-delay="350"
                                  md-input-minlength="2"
                                  md-no-cache="false"
