--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.css
@@ -23,7 +23,7 @@
 }
 .library-choose .univeristy .img-circle {
   overflow: hidden;
-  background: #212325;
+  background: #ffffff;
 }
 .library-choose .univeristy .list-inline img {
   border-radius: 4px;
