--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
@@ -25,7 +25,7 @@
 
         .img-circle {
             overflow: hidden;
-            background: @backgroundColorBlack;
+            background: @textColorWhite;
         }
 
         .list-inline img {
