--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
@@ -104,6 +104,7 @@
         li.nav-item {
             width: 100%;
             padding-right: 10px;
+            margin: 2px 0;
         }
 
         .dashboard, .help, .logout {
